--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "pg": "^8.16.3"
   },
   "name": "sistem-purchasing",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "db.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node db.js"
   },
   "repository": {
     "type": "git",
