--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ SESSION_SECRET='eri104ri$7070'
 
 
 # Tambahkan variabel database
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_USER=root
 DB_PASSWORD=
 DB_NAME=sistem_purchasing
+FONNTE_TOKEN=qP9CqdjVvGNuMhTeKpof
