--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,4 @@
-# Dependencies
-/node_modules
-
-# Environment variables
+node_modules/
 .env
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Local tools (tidak perlu di Railway)
-ngrok.exe
-vpn.conf
+.DS_Store
+*.log
