feat: include app login link in whatsapp notifications

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ DB_USER=root
 DB_PASSWORD=
 DB_NAME=sistem_purchasing
 FONNTE_TOKEN=qP9CqdjVvGNuMhTeKpof
+APP_URL=https://sistem-purchasing-production-b660.up.railway.app
