--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node scripts/create-settings-table.js && node scripts/add-reject-reason.js && node server.js"
   },
   "repository": {
     "type": "git",
