feat: implement web push notifications (sound and vibrate)

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ DB_PASSWORD=
 DB_NAME=sistem_purchasing
 FONNTE_TOKEN=qP9CqdjVvGNuMhTeKpof
 APP_URL=https://sistem-purchasing-production-b660.up.railway.app
+VAPID_PUBLIC_KEY=BKagwE25zgEXeHmcqcy01lkHxD_0VJ616gqXcqNjCGvUjqdrcqZOfX0Ue_LMDVheYchpf04V1qZwEW72bw4xhpg
+VAPID_PRIVATE_KEY=N9QtgC5-g0MBaTW3rM49O1SugVGhMMjOYFUci06xsjQ
