--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "helmet": "^8.1.0",
-    "mysql2": "^3.15.0"
+    "mysql2": "^3.15.0",
+    "web-push": "^3.6.7"
   },
   "name": "sistem-purchasing",
   "version": "1.0.0",
